[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nproan"
version = "0.0.3"
authors = [
  { name="Florian Heinrich", email="florianheinrich@gmx.at" },
]
description = "Tools for analysis of data from the DANAE experiment on HEPHY"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/shakamaran/nproan"
Issues = "https://github.com/shakamaran/nproan/issues"